--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.4",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.20",
+    "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
